2022-04-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode): Set sentence-end-double-space to t
	when editing eclasses.

2022-03-18  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.56 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	Keyword @ECLASS-VARIABLE renamed to @ECLASS_VARIABLE.

2022-01-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-menu, ebuild-repo-mode-menu):
	Add entry for customize-group.

2022-01-16  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.55 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-eapi-list): Drop EAPI 5.

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	Use ebuild-mode-full-name and ebuild-mode-mail-address as default
	author information.
	* glep-mode.el (glep-mode-insert-skeleton): Ditto.

	* ebuild-mode.texi (ebuild-repo-mode): Document it.

	* ebuild-mode.texi (ebuild-mode): No longer mention the C-c C-a
	keybinding which was used for echangelog.

2022-01-09  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-tag-line): New function,
	inserts a tag line with user's name and date stamp, for use in
	package.mask and similar configuration files. Bug 830796.
	(ebuild-mode-full-name, ebuild-mode-mail-address): New custom
	variables.
	(ebuild-repo-mode): Add :keymap argument.
	(ebuild-repo-mode-map): New keymap.
	(ebuild-repo-mode-menu): New menu.

	* ebuild-mode.el (ebuild-repo-mode-maybe-enable)
	(ebuild-mode-menu): Quote lisp symbols in docstrings.

2021-12-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.54 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2021-12-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-repo-mode): Use same fill-column and
	tab-width as ebuild-mode.

2021-09-01  Ulrich Müller  <ulm@gentoo.org>
